refactor(orm): change hibernate to ebean